--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,17 @@
 spring:
   application:
     name: gcp
+  datasource:
+#    url: jdbc:mysql://localhost:3306/gcpdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+    url: jdbc:mysql://senac-hello-world-475422:us-central1:mysql-gcp:3306/mysql-gcp?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+    username: sa
+    password: password
+  jpa:
+    hibernate:
+      ddl-auto: update   # para dev: create, create-drop, update; em prod use migrations
+    properties:
+      hibernate:
+        #        dialect: org.hibernate.dialect.H2Dialect    # No H2
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    show_sql: true
 #senac-hello-world
