--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>3.4.0</version>
+<!--			<version>3.4.0</version>-->
 		</dependency>
 		<!-- MySql Connector -->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<version>9.1.0</version>
+<!--			<version>9.1.0</version>-->
 		</dependency>
 
 		<!-- Lombok -->
