--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,9 +3,10 @@ spring:
     name: gcp
   datasource:
 #    url: jdbc:mysql://localhost:3306/gcpdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
-    url: jdbc:mysql://34.61.51.194:3306/gcpdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+    url: jdbc:mysql://34.61.51.194:3306/gcpdb #?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
     username: sa
     password: password
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update   # para dev: create, create-drop, update; em prod use migrations
