--- a/pom.xml
+++ b/pom.xml
@@ -43,17 +43,17 @@
 		</dependency>
 
 		<!-- Spring Data -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-<!--			<version>3.4.0</version>-->
-		</dependency>
-		<!-- MySql Connector -->
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-<!--			<version>9.1.0</version>-->
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--&lt;!&ndash;			<version>3.4.0</version>&ndash;&gt;-->
+<!--		</dependency>-->
+<!--		&lt;!&ndash; MySql Connector &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>com.mysql</groupId>-->
+<!--			<artifactId>mysql-connector-j</artifactId>-->
+<!--&lt;!&ndash;			<version>9.1.0</version>&ndash;&gt;-->
+<!--		</dependency>-->
 
 		<!-- Lombok -->
 		<dependency>
