--- a/pom.xml
+++ b/pom.xml
@@ -13,24 +13,30 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>gcp</name>
 	<description>Demo project for Spring Boot</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
 	<properties>
 		<java.version>21</java.version>
 		<lombok.version>1.18.36</lombok.version>
+		<spring-boot-starter-data-jpa.version>3.4.0</spring-boot-starter-data-jpa.version>
+		<mysql-connector-j.version>9.1.0</mysql-connector-j.version>
+		<!-- Mitiga o CVE-2025-11226 -->
+		<logback.version>1.5.20</logback.version>  <!-- >=1.5.19 já corrige -->
+		<janino.version>3.1.12</janino.version>    <!-- opcional, recomendado -->
 	</properties>
 	<dependencies>
+		<!-- (Opcional) Pinar Janino -->
+		<!-- Mitiga o CVE-2025-11226 -->
+		<!-- Janino é uma dependência opcional do Logback -->
+		<!-- Recomendada para evitar problemas em tempo de execução -->
+		<!-- Caso não queira usar, remova esta dependência e monitore atualizações do Logback -->
+		<!-- Veja mais em: https://logging.apache.org/log4j/2.x/security.html -->
+		<dependency>
+			<groupId>org.codehaus.janino</groupId>
+			<artifactId>janino</artifactId>
+			<version>${janino.version}</version>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+		<!-- Web + Logging (logback vem transitivo) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -49,6 +55,17 @@
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- JPA (sem versão explícita) -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--		</dependency>-->
+		<!-- MySql Connector - Driver MySQL (deixe o Boot 3.5.6 gerenciar) -->
+<!--		<dependency>-->
+<!--			<groupId>com.mysql</groupId>-->
+<!--			<artifactId>mysql-connector-j</artifactId>-->
+<!--		</dependency>-->
 
 	</dependencies>
 
