--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,16 @@
 			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
 
+		<!-- Google Cloud SQL Socket Factory para MySQL -->
+		<!-- O Spring Boot não gerencia a versão do mysql-socket-factory-connector-j-8 -->
+		<!-- Use a versão mais recente disponível -->
+		<dependency>
+			<groupId>com.google.cloud.sql</groupId>
+			<artifactId>mysql-socket-factory-connector-j-8</artifactId>
+			<version>1.26.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
