--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,8 +2,8 @@ spring:
   application:
     name: gcp
   datasource:
-    url: jdbc:mysql://localhost:3306/gcpdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
-#    url: jdbc:mysql://34.61.51.194:3306/gcpdb #?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+#    url: jdbc:mysql://localhost:3306/gcpdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+    url: jdbc:mysql:///gcpdb?cloudSqlInstance=senac-hello-world-475422:us-central1:mysql-gcp&socketFactory=com.google.cloud.sql.mysql.SocketFactory&ipTypes=PUBLIC&useSSL=false&serverTimezone=America/Sao_Paulo
     username: sa
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
