--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
 			<groupId>com.google.cloud</groupId>
 			<artifactId>spring-cloud-gcp-starter-secretmanager</artifactId>
 <!--			<version>7.3.0</version>-->
+			<version>6.3.4</version>
 		</dependency>
 
 
