adding dependency to use secret manager

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     url: jdbc:mysql:///gcpdb?cloudSqlInstance=senac-hello-world-475422:us-central1:mysql-gcp&socketFactory=com.google.cloud.sql.mysql.SocketFactory&ipTypes=PUBLIC&useSSL=false&serverTimezone=America/Sao_Paulo
     username: ${DB_USER:sa}
 #    password: password
-    password: ${sm://DB_PASSWORD:password}
+    password: ${sm://DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
